--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,18 +5,18 @@
     <p style="position:absolute;left:30px;top:1100px"><font face="arial" size="1">C Eric D. 2011</font></p>
 
 	<div id="sidebar">
-		<span id='one' class="r1"></span></br>
-		<span id='two' class="r2"></span></br>
-		<span id='three' class="r1"></span></br>
-		<span id='four' class="r2"></span></br>
-		<span id='five' class="r1"></span></br>
-		<span id='six' class="r2"></span></br>
-		<span id='seven' class="r1"></span></br>
-		<span id='eight' class="r2"></span></br>
-		<span id='nine' class="r1"></span></br>
-		<span id='ten' class="r2"></span></br>
-		<span id='eleven' class="r1"></span></br>
-		<span id='twelve' class="r2"></span></br>
+		<span id='one' class="r1"><font face="arial" size="1" color="#ccc">green performance</font></span></br>
+		<span id='two' class="r2"><font face="arial" size="1" color="#ccc">green perspective</font></span></br>
+		<span id='three' class="r1"><font face="arial" size="1" color="#ccc">green efficiency</font></span></br>
+		<span id='four' class="r2"><font face="arial" size="1" color="#ccc">intelligent facilities</font></span></br>
+		<span id='five' class="r1"><font face="arial" size="1" color="#ccc">green regions</font></span></br>
+		<span id='six' class="r2"><font face="arial" size="1" color="#ccc">green neighborhood</font></span></br>
+		<span id='seven' class="r1"><font face="arial" size="1" color="#ccc">green disciplines</font></span></br>
+		<span id='eight' class="r2"><font face="arial" size="1" color="#ccc">capital projects</font></span></br>
+		<span id='nine' class="r1"><font face="arial" size="1" color="#ccc">green remodel</font></span></br>
+		<span id='ten' class="r2"><font face="arial" size="1" color="#ccc">green practice</font></span></br>
+		<span id='eleven' class="r1"><font face="arial" size="1" color="#ccc">green preservation</font></span></br>
+		<span id='twelve' class="r2"><font face="arial" size="1" color="#ccc">green operation</font></span></br>
 	</div>
 
 	<div id="content">
