--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -37,23 +37,24 @@ color:#000000;
     float: left;  
     width: 150px;  
     background: #ccc;  
-    margin: 25px;  
+    margin-left: 25px;  
+    margin-right: 25px;  
     font-size:30px;
     text-align:center;
 }  
 #content {  
     float: left;  
-    width: 750px;  
+    width: 500px;  
 }
 
 #creds {
-	float: right;
-	padding-right:1em;
+	float: center;
+	padding-right:5px;
 }
 
 p.text-green {
 	text-align:center;
-	padding:2em;
+	padding:20px;
 	background:#99FFCC;
 	border-style:solid;
 	font-weight:bold;
@@ -61,8 +62,8 @@ p.text-green {
 
 p.text-red {
 	text-align:center;
-	padding:2em;
-	background:#FFC1C1;
+	padding:10px;
+	background:#ccc;
 	border-style:solid;
 	font-weight:bold;
 }
