--- a/app/views/home/_creds.html.erb
+++ b/app/views/home/_creds.html.erb
@@ -8,7 +8,7 @@
 			<%= link_to "Mobile Site", :mobile => 1 %> 
 		<% end %>
 <% else %>
-   <p class='text-red'><span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to 'Login', new_session_path %></span> | <span><%= link_to 'Signup', signup_path %></span></br>
+   <p style="position:relative;left:300px"><span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to 'Login', new_session_path %></span> | <span><%= link_to 'Signup', signup_path %></span></br>
 	<p id="notice"><%= notice %></p></p>
 <% end %>
 </div>
