--- a/app/views/home/_tweets1.html.erb
+++ b/app/views/home/_tweets1.html.erb
@@ -2,6 +2,8 @@
   <tr>
     <th></th>
     <th></th>
+
+
   </tr>
 <% @tweets1.each do |tweet| %>
   <tr>
@@ -16,7 +18,7 @@
 <% if current_user %>
   <p class='text-green'><font face="arial">/disruptive_stability/value</font></p>
 <% else %>
-  <p class='text-red'>Signup to view comments</p>
+  <p class='text-red'><font face="arial" size="6" color="#808080">netgreenbuilding</font><font face="arial">green performance</font></br>Signup to view comments</p>
 <% end %>
 <script>
 
