--- a/app/views/home/_tweets2.html.erb
+++ b/app/views/home/_tweets2.html.erb
@@ -14,7 +14,7 @@
 <hr>
 
 <% if current_user %>
-<p class='text-green'><font face="arial">/disruptive_stability/function</p>
+<p class='text-green'><font face="arial">comments</p>
 <% else %>
   <p class='text-red'>Signup to view comments</p>
 <% end %>
