--- a/app/views/home/_creds.html.erb
+++ b/app/views/home/_creds.html.erb
@@ -1,6 +1,6 @@
 <div id='nav' style='display:none'>
 <% if current_user then %>
-	<p class='text-green'><span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span></br>
+	<p style="position:relative;left:300px"><span id="clear"><%= submit_tag 'Clear Tags' %></span> <span><%= link_to "Hashtags", hashtags_path %></span> | <span><%= link_to "Logout", logout_path %></span></br>
 	<p id="notice"><%= notice %><span align='right'><%= current_user.email %></span></p</p>
 	<% if mobile_device? %> 
 			<%= link_to "Full Site", :mobile => 0 %> 
