--- a/app/views/home/_tweets11.html.erb
+++ b/app/views/home/_tweets11.html.erb
@@ -3,6 +3,13 @@
     <th></th>
     <th></th>
   </tr>
+<% if current_user %>
+<p class='text-green'>test</p>
+<% else %>
+<p class='text-red'><font face="arial" size="6" color="#808080">green preservation </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+	<a href="http://network.aia.org/historicresourcescommittee/home/" target="blank"><font face="arial">http://network.aia.org/historicresourcescommittee/home/</font></a></br>
+	<font face="arial" color="#ffffff">Signup to view comments</font></p>
+<% end %>
 <% @tweets11.each do |tweet| %>
   <tr>
 	<td>~</td>
@@ -13,11 +20,6 @@
 </table>
 <hr>
 
-<% if current_user %>
-<p class='text-green'>/disruptive_stability/quality</p>
-<% else %>
-  <p class='text-red'>Signup to view comments</p>
-<% end %>
 
 <script>
 $("span#eleven").hover(
