--- a/app/views/home/_tweets5.html.erb
+++ b/app/views/home/_tweets5.html.erb
@@ -3,6 +3,13 @@
     <th></th>
     <th></th>
   </tr>
+<% if current_user %>
+<p class='text-green'><font face="arial">test</font></p>
+<% else %>
+<p class='text-red'><font face="arial" size="6" color="#808080">green regions </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+	<a href="http://www.aiaga.org/SAR%20Information/SARCallforPresentations.pdf" target="blank"><font face="arial">http://www.aiaga.org/SAR%20Information/SARCallforPresentations.pdf</a></br>
+	<font face="arial" color="#ffffff">Signup to view comments</font></p>
+<% end %>
 <% @tweets5.each do |tweet| %>
   <tr>
 	<td>~</td>
@@ -13,11 +20,7 @@
 </table>
 <hr>
 
-<% if current_user %>
-<p class='text-green'><font face="arial">/disruptive_stability/systems</font></p>
-<% else %>
-  <p class='text-red'>Signup to view comments</p>
-<% end %>
+
 
 <script>
 $("span#five").hover(
