--- a/app/views/home/_tweets7.html.erb
+++ b/app/views/home/_tweets7.html.erb
@@ -3,6 +3,12 @@
     <th></th>
     <th></th>
   </tr>
+<% if current_user %>
+<p class='text-green'><font face="arial">test</p>
+<% else %>
+<p class='text-red'><font face="arial" size="6" color="#808080">green disciplines </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+	<a href="http://www.redvector.com/lp/other-continuing-education.aspx" target="blank"><font face="arial">http://www.redvector.com/lp/other-continuing-education.aspx</a></br>
+	<font face="arial" color="#ffffff">Signup to view comments</font></p>
 <% @tweets7.each do |tweet| %>
   <tr>
 	<td>~</td>
@@ -13,10 +19,7 @@
 </table>
 <hr>
 
-<% if current_user %>
-<p class='text-green'><font face="arial">/disruptive_stability/integration</p>
-<% else %>
-  <p class='text-red'>Signup to view comments</p>
+
 <% end %>
 
 <script>
