--- a/app/views/home/_tweets9.html.erb
+++ b/app/views/home/_tweets9.html.erb
@@ -3,6 +3,13 @@
     <th></th>
     <th></th>
   </tr>
+<% if current_user %>
+<p class='text-green'>test</p>
+<% else %>
+<p class='text-red'><font face="arial" size="6" color="#808080">green remodel </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+	<a href="http://hanleywooduniversity.com/learncenter.asp" target="blank"><font face="arial">http://hanleywooduniversity.com/learncenter.asp</a></br>
+	<font face="arial" color="#ffffff">Signup to view comments</font></p>
+<% end %>
 <% @tweets9.each do |tweet| %>
   <tr>
 	<td>~</td>
@@ -13,11 +20,7 @@
 </table>
 <hr>
 
-<% if current_user %>
-<p class='text-green'>/disruptive_stability/drawing</p>
-<% else %>
-  <p class='text-red'>Signup to view comments</p>
-<% end %>
+
 
 <script>
 $("span#nine").hover(
