--- a/app/views/home/_tweets3.html.erb
+++ b/app/views/home/_tweets3.html.erb
@@ -6,8 +6,9 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">test</p>
 <% else %>
-  <p class='text-red'><font face="arial" size="6" color="#808080">green efficiency </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
-<font face="arial" color="#ffffff">Signup to view comments</font></p>
+<p class='text-red'><font face="arial" size="6" color="#808080">green efficiency </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+	<a href="http://www.ncarb.org/continuing-education.aspx" target="blank"><font face="arial">http://www.ncarb.org/continuing-education.aspx</a></br>
+	<font face="arial" color="#ffffff">Signup to view comments</font></p>
 <% end %>
 <% @tweets3.each do |tweet| %>
   <tr>
