added image to web index file line:23

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,6 +20,7 @@
 	</div>
 
 	<div id="content">
+	    <%= link_to (image_tag 'IMG_1721.JPG', :height => '100', :width => '100', :class => "header_image") %>
 		<div id='tweets1' style="display:none"><%= render :partial => 'tweets1' %></div>
 		<div id='tweets2' style="display:none"><%= render :partial => 'tweets2' %></div>
 		<div id='tweets3' style="display:none"><%= render :partial => 'tweets3' %></div>
