--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 		<span id='two' class="r2"><font face="arial" size="1" color="#ccc">green perspective</font></span></br>
 		<span id='three' class="r1"><font face="arial" size="1" color="#ccc">green efficiency</font></span></br>
 		<span id='four' class="r2"><font face="arial" size="1" color="#ccc">intelligent facilities</font></span></br>
-		<span id='five' class="r1"><font face="arial" size="1" color="#ccc">green regions</font></span></br>
+		<span id='five' class="r1"><font face="arial" size="1" color="#ccc">regional sustainability</font></span></br>
 		<span id='six' class="r2"><font face="arial" size="1" color="#ccc">green neighborhood</font></span></br>
 		<span id='seven' class="r1"><font face="arial" size="1" color="#ccc">green disciplines</font></span></br>
 		<span id='eight' class="r2"><font face="arial" size="1" color="#ccc">capital projects</font></span></br>
