--- a/app/views/home/_tweets8.html.erb
+++ b/app/views/home/_tweets8.html.erb
@@ -6,8 +6,10 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">test</p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">capital projects </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+<p class='text-red'><font face="arial" size="6" color="#808080">urban cleantech </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
 	<a href="http://www.nwarchco.com/knowledge%2Dinstitute/" target="blank"><font face="arial">http://www.nwarchco.com/knowledge%2Dinstitute/</a></br>
+		<a href="http://www.maryhillmuseum.org/index.html" target="blank"><font face="arial">http://www.maryhillmuseum.org/index.html</a></br>
+			<a href="http://www.aisc.org/content.aspx?id=4378" target="blank"><font face="arial">http://www.aisc.org/content.aspx?id=4378</a></br>
 	<font face="arial" color="#ffffff">Signup to view comments</font></p>
 <% end %>
 <% @tweets8.each do |tweet| %>
