--- a/app/views/home/_tweets11.html.erb
+++ b/app/views/home/_tweets11.html.erb
@@ -6,7 +6,7 @@
 <% if current_user %>
 <p class='text-green'>test</p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">green preservation </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+<p class='text-red'><font face="arial" size="6" color="#808080">smart restoration </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
 	<a href="http://network.aia.org/historicresourcescommittee/home/" target="blank"><font face="arial">http://network.aia.org/historicresourcescommittee/home/</font></a></br>
 	<font face="arial" color="#ffffff">Signup to view comments</font></p>
 <% end %>
