--- a/app/views/home/_tweets2.html.erb
+++ b/app/views/home/_tweets2.html.erb
@@ -9,7 +9,10 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">comments</p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">green perspective </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br><a href="http://www.fldbia.org/Documents/AIA%20DB%20%20Dorwin%20Thomas%20presentation.pdf" target="blank"><font face="arial">http://www.fldbia.org/Documents/AIA%20DB%20%20Dorwin%20Thomas%20presentation.pdf</a></br><font face="arial" color="#ffffff">Signup to view comments</font></p>
+<p class='text-red'><font face="arial" size="6" color="#808080">energy perspective </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
+<font face="arial" color="#ffffff">adventures in continuing education:</font></br><a href="http://www.fldbia.org/Documents/AIA%20DB%20%20Dorwin%20Thomas%20presentation.pdf" target="blank"><font face="arial">http://www.fldbia.org/Documents/AIA%20DB%20%20Dorwin%20Thomas%20presentation.pdf</a></br><a href="http://www.hzuniversity.com/topics/" target="blank"><font face="arial">http://www.hzuniversity.com/topics/</a></br>
+	<a href="http://bettercities.net/" target="blank"><font face="arial">http://bettercities.net/</a></br>
+	<font face="arial" color="#ffffff">Signup to view comments</font></p>
 <% end %><% @tweets2.each do |tweet| %>
   <tr>
 	<td>~</td>
