--- a/app/views/home/_tweets5.html.erb
+++ b/app/views/home/_tweets5.html.erb
@@ -6,7 +6,7 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">test</font></p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">green regions </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+<p class='text-red'><font face="arial" size="6" color="#808080">regional sustainability </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
 	<a href="http://www.aiaga.org/SAR%20Information/SARCallforPresentations.pdf" target="blank"><font face="arial">http://www.aiaga.org/SAR%20Information/SARCallforPresentations.pdf</a></br>
 	<font face="arial" color="#ffffff">Signup to view comments</font></p>
 <% end %>
