--- a/app/views/home/_tweets6.html.erb
+++ b/app/views/home/_tweets6.html.erb
@@ -6,8 +6,9 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">test</p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">green neighborhood </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+<p class='text-red'><font face="arial" size="6" color="#808080">eco neighborhood </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
 	<a href="http://www.designrealized.com/" target="blank"><font face="arial">http://www.designrealized.com/</a></br>
+		<a href="http://www.scps.nyu.edu/areas-of-study/real-estate/professional-certificates/aec-certificates/" target="blank"><font face="arial">http://www.scps.nyu.edu/areas-of-study/real-estate/professional-certificates/aec-certificates/</a></br>
 	<font face="arial" color="#ffffff">Signup to view comments</font></p>
 <% end %>
 <% @tweets6.each do |tweet| %>
