--- a/app/views/home/_tweets4.html.erb
+++ b/app/views/home/_tweets4.html.erb
@@ -6,7 +6,7 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">test</font></p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">intelligent facilities </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
+<p class='text-red'><font face="arial" size="6" color="#808080">intelligent power </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
 	<a href="http://construction.com/" target="blank"><font face="arial">http://construction.com/</a></br>
 	<a href="http://www.daylighting.com/" target="blank"><font face="arial">http://www.daylighting.com/</a></br>
 	<a href="http://www.smart-buildings.com/" target="blank"><font face="arial">http://www.smart-buildings.com/</a></br>	<font face="arial" color="#ffffff">Signup to view comments</font></p>
