--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,7 +55,7 @@
 		<span id='one' class="r1"><font face="arial" size="1" color="#ccc">social fit-out</font></span></br>
 		<span id='two' class="r2"><font face="arial" size="1" color="#ccc">energy perspective</font></span></br>
 		<span id='three' class="r1"><font face="arial" size="1" color="#ccc">hybrid rehab</font></span></br>
-		<span id='four' class="r2"><font face="arial" size="1" color="#ccc">intelligent facilities</font></span></br>
+		<span id='four' class="r2"><font face="arial" size="1" color="#ccc">intelligent power</font></span></br>
 		<span id='five' class="r1"><font face="arial" size="1" color="#ccc">regional sustainability</font></span></br>
 		<span id='six' class="r2"><font face="arial" size="1" color="#ccc">eco neighborhood</font></span></br>
 		<span id='seven' class="r1"><font face="arial" size="1" color="#ccc">green disciplines</font></span></br>
