--- a/app/views/home/_tweets12.html.erb
+++ b/app/views/home/_tweets12.html.erb
@@ -6,7 +6,7 @@
 <% if current_user %>
 <p class='text-green'>test</p>
 <% else %>
- <p class='text-red'><font face="arial" size="6" color="#808080">site power </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+ <p class='text-red'><font face="arial" size="6" color="#808080">site efficiency </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
 	<a href="http://lms.architect-forum.com/index.php" target="blank"><font face="arial">http://lms.architect-forum.com/index.php</a></br>
 		<a href="http://www.google.com/green/" target="blank"><font face="arial">http://www.google.com/green/</a></br>
 			<a href="http://www.automatedbuildings.com/" target="blank"><font face="arial">http://www.automatedbuildings.com/</a></br>
