--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,7 @@
 		<span id='nine' class="r1"><font face="arial" size="1" color="#ccc">symbiotic remodel</font></span></br>
 		<span id='ten' class="r2"><font face="arial" size="1" color="#ccc">transparent process</font></span></br>
 		<span id='eleven' class="r1"><font face="arial" size="1" color="#ccc">smart restoration</font></span></br>
-		<span id='twelve' class="r2"><font face="arial" size="1" color="#ccc">site power</font></span></br>
+		<span id='twelve' class="r2"><font face="arial" size="1" color="#ccc">site efficiency</font></span></br>
 	</div>
 
 	<div id="content">
