--- a/app/views/home/_tweets1.html.erb
+++ b/app/views/home/_tweets1.html.erb
@@ -11,7 +11,7 @@
   <p class='text-red'><font face="arial" size="6" color="#808080">social fit-out </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
 	<!--<%= link_to (image_tag 'IMG_1721.JPG', :height => '100', :width => '100', :class => "header_image") %>-->
 	<a href="http://arkhisocial.wordpress.com/2012/04/17/contact/" target="blank"><font face="arial">contact 17 April 2012 wordpress</a></br>
-	<font face="arial" color="#ffffff">Signup to view comments</font>
+	<font face="arial" color="#ffffff">Signup for virtualrealcities</font>
 	</p>
 <% end %>
 <% @tweets1.each do |tweet| %>
