--- a/app/views/home/_tweets12.html.erb
+++ b/app/views/home/_tweets12.html.erb
@@ -6,11 +6,11 @@
 <% if current_user %>
 <p class='text-green'>test</p>
 <% else %>
- <p class='text-red'><font face="arial" size="6" color="#808080">site efficiency </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+ <p class='text-red'><font face="arial" size="6" color="#808080">site efficiency </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
 	<a href="http://lms.architect-forum.com/index.php" target="blank"><font face="arial">http://lms.architect-forum.com/index.php</a></br>
 		<a href="http://www.google.com/green/" target="blank"><font face="arial">http://www.google.com/green/</a></br>
 			<a href="http://www.automatedbuildings.com/" target="blank"><font face="arial">http://www.automatedbuildings.com/</a></br>
-	<font face="arial" color="#ffffff">Signup to view comments</p>
+	<font face="arial" color="#ffffff">Signup for virtualrealcities</p>
 <% end %>
 
 <% @tweets12.each do |tweet| %>
