--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 	  <div class="slides_container">
 	    <div style="display:none">
 	      <h1>Slide 1</h1>
-	      <!--<%= link_to (image_tag 'IMG_1721.JPG', :height => '500', :width => '500', :class => "header_image") %>-->
+	      <%= link_to (image_tag 'portfolio.jpg', :height => '500', :width => '500', :class => "header_image") %>
 	    </div>
 	    <div>
 	      <h1>Slide 2</h1>
