--- a/app/views/home/_tweets3.html.erb
+++ b/app/views/home/_tweets3.html.erb
@@ -9,7 +9,7 @@
 <p class='text-red'><font face="arial" size="6" color="#808080">hybrid rehab </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
 	<a href="http://www.ncarb.org/continuing-education.aspx" target="blank"><font face="arial">http://www.ncarb.org/continuing-education.aspx</a></br>
 		<a href="http://www.aecdaily.com/" target="blank"><font face="arial">http://www.aecdaily.com/</a></br>
-	<font face="arial" color="#ffffff">Signup to view comments</font></p>
+	<font face="arial" color="#ffffff">Signup for virtualrealcities</font></p>
 <% end %>
 <% @tweets3.each do |tweet| %>
   <tr>
