--- a/app/views/home/_tweets7.html.erb
+++ b/app/views/home/_tweets7.html.erb
@@ -6,10 +6,10 @@
 <% if current_user %>
 <p class='text-green'><font face="arial">test</p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">green disciplines </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+<p class='text-red'><font face="arial" size="6" color="#808080">green disciplines </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
 	<a href="http://www.redvector.com/lp/other-continuing-education.aspx" target="blank"><font face="arial">http://www.redvector.com/lp/other-continuing-education.aspx</a></br>
 		<a href="http://www.acentech.com/resources/continuing-education.html" target="blank"><font face="arial">http://www.acentech.com/resources/continuing-education.html</a></br>
-	<font face="arial" color="#ffffff">Signup to view comments</font></p>
+	<font face="arial" color="#ffffff">Signup for virtualrealcities</font></p>
 <% @tweets7.each do |tweet| %>
   <tr>
 	<td>~</td>
