--- a/app/views/home/_tweets9.html.erb
+++ b/app/views/home/_tweets9.html.erb
@@ -6,9 +6,9 @@
 <% if current_user %>
 <p class='text-green'>test</p>
 <% else %>
-<p class='text-red'><font face="arial" size="6" color="#808080">symbiotic remodel </font><font face="arial" color="#808080"><u>netgreenbuilding</u></font></br>
+<p class='text-red'><font face="arial" size="6" color="#808080">symbiotic remodel </font><font face="arial" color="#808080" size="1"><u>netgreenbuilding</u></font></br>
 	<a href="http://hanleywooduniversity.com/learncenter.asp" target="blank"><font face="arial">http://hanleywooduniversity.com/learncenter.asp</a></br>
-	<font face="arial" color="#ffffff">Signup to view comments</font></p>
+	<font face="arial" color="#ffffff">Signup for virtualrealcities</font></p>
 <% end %>
 <% @tweets9.each do |tweet| %>
   <tr>
